# aircraft_icao_country

./: .gitignore  Cargo.toml  README.md  countryranges.py
src/: countryranges.csv  lib.rs
